gcc/testsuite/rust/compile/issue-4262.rs
#[cfg]
// { dg-error ".cfg. is not followed by parentheses" "" { target *-*-* } .-1 }
fn a() {}
